--- a/geolocator/pubspec.yaml
+++ b/geolocator/pubspec.yaml
@@ -29,7 +29,10 @@ dependencies:
   geolocator_platform_interface: ^4.2.3
   geolocator_android: ^4.6.0
   geolocator_apple: ^2.3.7
-  geolocator_web: ^4.1.1
+  geolocator_web:
+    git: https://github.com/amxDusT/flutter-geolocator.git
+    ref: main
+    path: geolocator_web
   geolocator_windows: ^0.2.3
 
 dev_dependencies:
